--- a/edu.html
+++ b/edu.html
@@ -39,6 +39,8 @@
     <section id="section">
         <div id="mainContent">
             <blockly-code></blockly-code>
+            <path-code></path-code>
+            <write-code></write-code>
         </div>
         <div id="rightSidebar">
             <ul class="sidebarBtnGroup">
