--- a/edu0704/edu.html
+++ b/edu0704/edu.html
@@ -137,6 +137,7 @@
         <register-modal v-if="registerModalStatus" v-bind:post="register"></register-modal>
         <stuinfo-modal v-if="stuInfoStatus" v-bind:post="stuInfo"></stuinfo-modal>
         <example-modal v-if="exampleStatus" v-bind:post="example"></example-modal>
+        <addmac-modal v-if="addmacStatus"></addmac-modal>
     </div>
     <div class="mask"></div>
     <script type="text/javascript">
