--- a/edu0704/edu.html
+++ b/edu0704/edu.html
@@ -17,10 +17,10 @@
     <script src="ace/theme-tomorrow_night_eighties.js" type="text/javascript" charset="utf-8"></script>
     <script src="ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="./css/normal.css"/>
-    <link rel="stylesheet" href="./css/edu.css"/>
-    <link rel="stylesheet" href="./css/path.css"/>
-    <link rel="stylesheet" href="./css/code.css"/>
+    <link rel="stylesheet" href="./css/vuenormal.css"/>
+    <link rel="stylesheet" href="./css/vueedu.css"/>
+    <link rel="stylesheet" href="./css/vuepath.css"/>
+    <link rel="stylesheet" href="./css/vuecode.css"/>
 </head>
 
 <body>
@@ -148,11 +148,11 @@
             $('.codeCode').css({ 'display': 'none' });
         }
     </script>
-    <script src="js/ajax.js"></script>
-    <script src="js/component.js"></script>
-    <script src="js/edu.js"></script>
-    <script src="js/Blocklyindex.js"></script>
-    <script src="js/code.js"></script>
-    <script src="js/path.js"></script>
+    <script src="js/vueBlocklyindex.js"></script>
+    <script src="js/vuecomponent.js"></script>
+    <script src="js/vueedu.js"></script>
+    <script src="js/vueblockly.js"></script>
+    <script src="js/vuecode.js"></script>
+    <script src="js/vuepath.js"></script>
 </body>
 </html>
